--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -89,4 +89,12 @@ layout: default
       </div>
     </div>
   {% endif %}
+
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><!-- adSense -->
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-3443459502137342",
+      enable_page_level_ads: true
+    });
+  </script> <!-- adSense -->
 </div>
