--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,10 +13,9 @@
     {% endif %}
 
     <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
+   <li> <a href="/contacto/" class="btn btn--primary"> Hablemos </a> </li>
   </ul>
-</div>
-<div>
-  <a href="/contacto/" class="btn btn--primary"> Hablemos </a>
+  
 </div>
 
 
