test partner certificactions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
     {% endif %}
 
     <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
-   
+   <li> <img scr="assets/images/logos/Gold_logo01.jpg" alt="Microsoft Partner" height="50" width="50">  </li>
   </ul>
   
 </div>
