--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,4 +1,6 @@
 <!-- start custom footer snippets -->
 
-<img src="/assets/images/logos/Gold_logo01.jpg">
+<div style="align-items: flex-end;">
+    <img src="/assets/images/logos/Gold_logo01.jpg" height="50px" width="50px" alt="microsoft partner">
+</div>
 <!-- end custom footer snippets -->
