--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,6 +1,6 @@
 <!-- start custom footer snippets -->
 
-<div style="align-items: flex-end;">
-    <img src="/assets/images/logos/Gold_logo01.jpg" height="50px" width="50px" alt="microsoft partner">
+<div style="align-items: center;">
+    <img src="/assets/images/logos/MSFT_PartnerNetwork.png" height="160px" width="50px" alt="microsoft partner">
 </div>
 <!-- end custom footer snippets -->
