fix logo partner

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,6 +1,6 @@
 <!-- start custom footer snippets -->
 
 <div style="align-items: center;">
-    <img src="/assets/images/logos/MSFT_PartnerNetwork.png" height="160px" width="50px" alt="microsoft partner">
+    <img src="/assets/images/logos/MSFT_PartnerNetwork.png" height="320px" width="100px" alt="microsoft partner" style="align-items: center;">
 </div>
 <!-- end custom footer snippets -->
