--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,6 +1,10 @@
 <!-- start custom footer snippets -->
 
-<div style="align-items: center;">
-    <img src="/assets/images/logos/MSFT_PartnerNetwork.png" height="320px" width="100px" alt="microsoft partner" style="align-items: center;">
+<div class="page__footer-follow">
+    <ul class="social-icons">
+        <li><strong>Partners</strong></li>
+        <li><img src="/assets/images/logos/MSFT_PartnerNetwork.png" height="340px" width="100px" alt="microsoft partner" ></li>
+        <li> </li>
+    </ul>
 </div>
 <!-- end custom footer snippets -->
