--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -2,9 +2,9 @@
 
 <div class="page__footer-follow">
     <ul class="social-icons">
-        <li><strong>Partners</strong></li>
-        <li><img src="/assets/images/logos/MSFT_PartnerNetwork.png" height="340px" width="100px" alt="microsoft partner" ></li>
-        <li> </li>
+        <li><strong>Partners:</strong></li>
+        <li><img src="/assets/images/logos/Footer_MSFT_PartnerNetwork.png" height="400px" width="150px" alt="microsoft partner" ></li>
+        <li><img src="/assets/images/logos/logo_footer_mintic.png" height="400px" width="150px" alt="microsoft partner" > </li>
     </ul>
 </div>
 <!-- end custom footer snippets -->
