link partner MSFT

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -3,7 +3,12 @@
 <div class="page__footer-follow">
     <ul class="social-icons">
         <li><strong>Partners:</strong></li>
-        <li><img src="/assets/images/certifications/Footer_MSFT_PartnerNetwork.png" height="390px" width="130px" alt="microsoft partner" ></li>
+        <li> 
+            <a href="https://www.microsoft.com/es-es/solution-providers/partnerdetails/cepobia-sas_635d61c7-0e25-4953-a017-5fe70e21d5cd/44e4b32c-a9ca-4c9f-aa16-b5e603485c1e"
+                <img src="/assets/images/certifications/Footer_MSFT_PartnerNetwork.png" 
+                height="390px" width="130px" alt="microsoft partner" >
+            </a>
+        </li>
         <li><img src="/assets/images/certifications/logo_footer_mintic.png" height="400px" width="150px" alt="microsoft partner" > </li>
     </ul>
 </div>
