--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -74,7 +74,7 @@ layout: default
 <!-- Principio del widget de globo de Calendly -->
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/cepobia/hablemos', text: 'Programe una reunión conmigo', color: '#006bff', textColor: '#ffffff', branding: false }); }</script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/cepobia/hablemos', text: 'Programe una reunión con Nosostros', color: '#006bff', textColor: '#ffffff', branding: false }); }</script>
 <!-- Final del widget de globo de Calendly -->
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><!-- adSense -->
