--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,12 @@
       </div>
     {% endif %}
 
+    <!-- Principio del widget de globo de Calendly -->
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+    <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/cepobia/hablemos', text: 'Hablemos', color: '#FFB718', textColor: '#ffffff', branding: false }); }</script>
+    <!-- Final del widget de globo de Calendly -->
+
     <div class="page__footer">
       <footer>
         {% include footer/custom.html %}
